...
  var body: some View {
    Group {
      if isActive {
        ContentView()
      } else {
        VStack {
          Image("MediBlockLogoStacked")
            .resizable()
            .scaledToFit()
            .frame(width: 150, height: 150)
            .accessibilityIdentifier("MediBlockLogoStacked")
            .opacity(opacity)
          VStack {
            Text("Digitizing medical identity....")
              .font(.headline)
              .fontWeight(.medium)
              .accessibilityIdentifier("DigitizingIdentityText")
            Text("to save time and paper")
              .font(.headline)
              .fontWeight(.medium)
...
